# diffpriv

./: .excalidraw  .gitignore  Cargo.toml  conf.json  package-lock.json  package.json  todo.txt
backend/: Cargo.toml  tauri.conf.json  test.db
backend/src/: lib.rs  main.rs
backend/src/database/: database.rs  schema.rs
backend/src/query/: analyzer.rs
backend/src/transforms/: mod.rs
dev/: fake.py  requirements.txt
src/: App.css  App.jsx  analyzer.rs  builtins.rs  database.rs  lexer.rs  lib.rs  main.rs  symbols.rs  tokens.rs
src/bridge/: mod.rs
src/components/: ConfigForm.jsx  ExecutionWindow.jsx  Tables.jsx
src/database/: connect.rs  database.rs  schema.rs
src/styles/: App.css  Config.css  Execution.css  Table.css
src/transforms/: mod.rs
