[package]
name = "diffpriv"
version = "0.1.0"
description = "A lightweight system for differential privacy"
authors = ["aradhyatripathi51@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "global-shortcut-all"] }
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.5"
mysql = "25.0.1"
rusqlite = "0.31.0"
serde_json = "1.0.117"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
